Add new order sound and payment options
