# lib/api-spec/openapi.yaml
@@ -1207,6 +1207,9 @@ components:
           type: ["string", "null"]
         customerPhone:
           type: ["string", "null"]
+        paymentMethod:
+          type: ["string", "null"]
+          enum: [pix, cash, debit_card, credit_card, null]
         status:
           type: string
           enum: [new, awaiting_payment, paid, production, ready, out_for_delivery, delivered, cancelled]
@@ -1276,6 +1279,9 @@ components:
           type: string
         customerPhone:
           type: string
+        paymentMethod:
+          type: string
+          enum: [pix, cash, debit_card, credit_card]
         deliveryType:
           type: string
           enum: [pickup, delivery]
@@ -1303,6 +1309,9 @@ components:
           type: string
         customerPhone:
           type: string
+        paymentMethod:
+          type: string
+          enum: [pix, cash, debit_card, credit_card]
         deliveryType:
           type: string
           enum: [pickup, delivery]
